# QMediathekView

./: .gitignore  .travis.yml  QMediathekView.appdata.xml  QMediathekView.desktop  QMediathekView.pro  README.md  application.cpp  application.h  astylerc  database.cpp  database.h  downloaddialog.cpp  downloaddialog.h  main.cpp  mainwindow.cpp  mainwindow.h  miscellaneous.cpp  miscellaneous.h  model.cpp  model.h  parser.cpp  parser.h  schema.h  settings.cpp  settings.h  settingsdialog.cpp  settingsdialog.h  torrentsession.cpp  torrentsession.h
.github/scripts/: build.sh
.github/workflows/: build.yaml
internals/: Cargo.toml
internals/src/: compressor.rs  database.rs  lib.rs  parser.rs
