[package]
name = "internals"
version = "0.1.0"
authors = ["Adam Reichold <adam.reichold@t-online.de>"]
edition = "2018"

[lib]
crate-type = ["staticlib"]

[dependencies]
chrono = { version = "0.4", default-features = false }
failure = "0.1"
rayon-core = "1.6"
isahc = { version = "0.7", default-features = false }
rusqlite = "0.20"
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = { version = "1.0", features = ["raw_value"] }
twoway = "0.2"
xz2 = "0.1"
zstd-safe = { version = "2.0", default-features = false }

[profile.release]
panic = "abort"
lto = true
