[package]
name = "internals"
version = "0.1.0"
authors = ["Adam Reichold <adam.reichold@t-online.de>"]
edition = "2018"

[lib]
crate-type = ["staticlib"]

[dependencies]
time = { version = "0.3", features = ["macros", "parsing"] }
memchr = "2.4"
rayon-core = "1.6"
rusqlite = { version = "0.29", features = ["bundled"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = { version = "1.0", features = ["raw_value"] }
xz2 = "0.1"
zeptohttpc = { version = "0.7", features = ["native-tls"] }
zstd-safe = { version = "7.0", default-features = false, features = ["std"] }

[profile.release]
lto = true
panic = "abort"
